@startuml
class PlayAudioActionSO {
    + AudioName : string <<get>>
}
class PlayAudioAction {
    + <<override>> Awake(stateController:StateController) : void
    + <<override>> OnStateEnter() : void
    + <<override>> OnStateUpdate() : void
    + <<override>> OnStateExit() : void
}
StateActionSO <|-- PlayAudioActionSO
PlayAudioActionSO --> "AudioSource" AudioSO
StateAction <|-- PlayAudioAction
PlayAudioAction --> "_originSO" PlayAudioActionSO
@enduml
